--- a/chat_webclient/src/App.css
+++ b/chat_webclient/src/App.css
@@ -1,4 +1,9 @@
-.App {
+:root {
+  --primary-color: #1868af;
+  --primary-color-alpha: #1e2b55;
+}
+
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +40,429 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+/* @media screen and (max-width: 960px) {
+  .str-chat-channel-list.team.light {
+    position: unset;
+    left: unset;
+    top: unset;
+    z-index: unset;
+    min-height: unset;
+    overflow-y: unset;
+    box-shadow: unset;
+    transition: unset;
+  }
+} */
+
+.app__wrapper {
+  display: flex;
+  flex: 1;
+  /* height: 800px; */
+  height: 100%;
+  /* border-radius: 16px; */
+  box-shadow: rgba(0, 0, 0, 0.33) 0px 1px 4px 0px;
+}
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+#root {
+  height: 100%;
+}
+
+.auth__form-container {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: row;
+}
+
+.auth__form-container_fields {
+  flex: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  padding: 2rem;
+  background: #1868af;
+}
+
+.auth__form-container_image {
+  flex: 3;
+  display: flex;
+  box-shadow: 1px 0px 5px rgba(0, 0, 0, 0.05);
+}
+
+.auth__form-container_image img {
+  width: 100%;
+  height: 100%;
+}
+
+.auth__form-container_fields-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+
+  padding: 2rem;
+  box-shadow: 0px 1px 5px rgb(0 0 0 / 10%);
+  border-radius: 5px;
+  transition: 0.8s ease;
+  background: #fff;
+}
+
+.auth__form-container_fields-content p {
+  font-size: 1.5rem;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #1e2b55;
+  font-weight: 900;
+}
+
+.auth__form-container_fields-content_input {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+
+  margin: 1rem 0rem;
+}
+
+.auth__form-container_fields-content_input label {
+  margin-bottom: 0.45rem;
+  color: rgb(61, 79, 88);
+  font-size: 12px;
+  font-family: Arial, Helvetica, sans-serif;
+  letter-spacing: 0.7px;
+  line-height: 1.3;
+}
+
+.auth__form-container_fields-content_input input {
+  padding: 0.55rem 0.4rem;
+  border: 1px solid rgb(184, 196, 194);
+  border-radius: 4px;
+  font-size: 14px;
+  outline: none;
+  transition: all 150ms ease-in-out 0s;
+  width: 85%;
+  background: #fff;
+}
+
+.auth__form-container_fields-content_input input::placeholder {
+  color: #b1b1b1;
+  width: 100%;
+  font-weight: unset;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.auth__form-container_fields-content_input input:hover {
+  border-color: #dcdddd;
+}
+
+.auth__form-container_fields-content_input input:focus,
+.auth__form-container_fields-content_input input:active {
+  box-shadow: 0px 0px 0px 1.5px #005fff;
+  border-color: #005fff;
+}
+
+.auth__form-container_fields-content_input-password {
+  position: absolute;
+  right: 13%;
+  top: 50%;
+  cursor: pointer;
+}
+
+.auth__form-container_fields-content_button {
+  margin-top: 2rem;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.auth__form-container_fields-content_button button {
+  border-radius: 4px;
+  background: #005fff;
+  border: 1px solid #005fff;
+  color: #fff;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 500;
+  padding: 0.7rem 1.2rem;
+  outline: none;
+  cursor: pointer;
+  transition: 0.3s ease;
+}
+
+.auth__form-container_fields-content_button button:hover {
+  background: #0066ff;
+}
+
+.auth__form-container_fields-account {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+
+  margin-top: 0.2rem;
+}
+
+.auth__form-container_fields-account p {
+  font-size: 14px;
+  color: #000;
+  font-weight: 500;
+}
+
+.auth__form-container_fields-account span {
+  color: #05245a;
+  cursor: pointer;
+  font-weight: 700;
+}
+
+@media screen and (max-width: 800px) {
+  .auth__form-container {
+    flex-direction: column-reverse;
+  }
+
+  .auth__form-container_fields {
+    justify-content: flex-start;
+  }
+
+  .auth__form-container_image {
+    height: 100px;
+    flex: none;
+    box-shadow: none;
+  }
+
+  .auth__form-container_image img {
+    object-fit: cover;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .auth__form-container_fields {
+    padding: 2rem 0.5rem;
+  }
+
+  .auth__form-container_fields-content_input input {
+    width: 95%;
+  }
+
+  .auth__form-container_fields-content_input-password {
+    right: 3%;
+  }
+}
+
+::placeholder {
+  color: rgba(255, 255, 255, 0.66);
+  white-space: nowrap;
+  width: 150px;
+}
+
+.workspace__container {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: row;
+}
+
+.workspace__container_fields {
+  flex: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  padding: 2rem;
+  background: #1868af;
+}
+
+.workspace__container_fields-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+
+  padding: 2rem;
+  box-shadow: 0px 1px 5px rgb(0 0 0 / 10%);
+  border-radius: 5px;
+  transition: 0.8s ease;
+  background: #fff;
+}
+
+.workspace__container_fields-content_button {
+  margin-top: 2rem;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.workspace__container_fields-content_button button {
+  border-radius: 4px;
+  background: #005fff;
+  border: 1px solid #005fff;
+  color: #fff;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 500;
+  padding: 0.7rem 1.2rem;
+  outline: none;
+  cursor: pointer;
+  transition: 0.3s ease;
+}
+
+.workspace__container_fields-content_button button:hover {
+  background: #0ca378;
+}
+
+.workspace__wrapper {
+  height: 50px;
+  display: flex;
+  align-items: center;
+}
+
+.workspace__wrapper__selected {
+  height: auto;
+  display: flex;
+  align-items: center;
+  background: rgba(0, 0, 0, 0.2);
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+  font-weight: bold;
+  margin-right: 16px;
+  cursor: pointer;
+  z-index: 2;
+}
+
+.workspace__wrapper:hover {
+  background: rgba(0, 0, 0, 0.2);
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+  font-weight: bold;
+  margin-right: 16px;
+  cursor: pointer;
+}
+
+.workspace__item {
+  display: flex;
+  align-items: center;
+  font-family: Helvetica Neue, sans-serif;
+  font-size: 14px;
+  color: #000000;
+  padding: 0px 20px;
+  height: 100%;
+  width: 100%;
+  text-overflow: ellipsis;
+  word-break: break-all;
+}
+
+.workspace__item.multi {
+  max-width: 220px;
+}
+
+.workspace__item.single .str-chat__avatar {
+  margin-right: 12px;
+}
+
+.workspace__item.multi .str-chat__avatar {
+  margin-right: 0;
+}
+
+.workspace__item.multi span:first-child {
+  position: relative;
+  z-index: 2;
+  bottom: 6px;
+}
+
+.workspace__item.multi div:nth-child(2) {
+  position: relative;
+  right: 10px;
+  z-index: 1;
+  margin-bottom: 0px;
+}
+
+.workspace__item.multi p {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.channel-list__container {
+  display: flex;
+  /* height: 800px; */
+  height: 100%;
+  box-shadow: inset 1px 0px 0px rgba(0, 0, 0, 0.1);
+}
+
+.channel-list__sidebar {
+  width: 72px;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+    var(--primary-color);
+  box-shadow: 1px 0px 0px rgba(0, 0, 0, 0.25);
+  /* border-top-left-radius: 16px;
+  border-bottom-left-radius: 16px; */
+}
+
+.channel-list__sidebar__icon1 {
+  width: 44px;
+  height: 44px;
+  margin: 14px;
+  background: linear-gradient(
+      150.64deg,
+      rgba(0, 0, 0, 0.1) 12.73%,
+      rgba(0, 0, 0, 0) 89.32%
+    ),
+    #ffffff;
+  border-radius: 9999px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.33);
+}
+
+.channel-list__list__wrapper {
+  display: flex;
+  flex-direction: column;
+  background: var(--primary-color);
+  width: 240px;
+}
+
+.icon1__inner {
+  font-family: Helvetica Neue, sans-serif;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.channel-list__sidebar__icon2 {
+  width: 44px;
+  height: 44px;
+  margin: 14px;
+  background: linear-gradient(
+      150.64deg,
+      rgba(0, 0, 0, 0.1) 12.73%,
+      rgba(0, 0, 0, 0) 89.32%
+    ),
+    #ffffff;
+  border-radius: 9999px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.33);
+  cursor: pointer;
+}
+
+.icon2__inner {
+  font-family: Helvetica Neue, sans-serif;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.channel-list__header {
+  padding-left: 16px;
+  height: 62px;
+}
+
+.channel-list__header__text {
+  font-family: Helvetica Neue, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 28px;
+  color: #ffffff;
+}
+
+::placeholder {
+  color: rgba(255, 255, 255, 0.66);
+  white-space: nowrap;
+  width: 150px;
 }
