--- a/chat_webclient/src/App.css
+++ b/chat_webclient/src/App.css
@@ -307,7 +307,7 @@ body {
   background: #0ca378;
 }
 
-.workspace__wrapper {
+.workspace__wrapper--workspace {
   box-sizing: border-box;
   box-shadow: 0 2px 5px rgba(0,0,0,.3);
   border-radius: 4px;
@@ -320,6 +320,11 @@ body {
   border-top: 90px solid ;
   border-image: linear-gradient(to right, #0e3877, #ADD8E6) 22;
   height: 150px;
+}
+.workspace__wrapper--channel{
+  height: 50px;
+  display: flex;
+  align-items: center;
 }
 
 .workspace__wrapper__selected {
@@ -335,12 +340,20 @@ body {
   z-index: 2;
 }
 
-.workspace__wrapper:hover {
+.workspace__wrapper--workspace:hover {
   background: rgba(0, 0, 0, 0.2);
   border-top-right-radius: 8px;
   border-bottom-right-radius: 8px;
   font-weight: bold;
-  margin-right: 16px;
+  box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+}
+
+.workspace__wrapper--channel:hover {
+  background: rgba(0, 0, 0, 0.2);
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+  font-weight: bold;
   cursor: pointer;
 }
 
