--- a/chat_webclient/src/App.css
+++ b/chat_webclient/src/App.css
@@ -662,3 +662,17 @@ body {
   font-weight: bold;
   margin-right: 15px;
 }
+
+.flex-scroll-parent {
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 auto;
+  min-height: 100%;
+}
+
+.flex-scroll {
+  flex: 1 1 auto;
+  min-height: 100%;
+  overflow-y: auto;
+}
+
