--- a/chat_webclient/src/App.css
+++ b/chat_webclient/src/App.css
@@ -657,6 +657,7 @@ body {
   height: 100%;
   flex-direction: column;
   color: black;
+  padding: 0 5px
 }
 
 .chatbox__container__messagelist {
@@ -687,7 +688,7 @@ body {
   display: flex;
   align-items: center;
   margin: 10px 0;
-  padding: 5px 20px;
+  padding: 5px 0;
 }
 
 .message:hover {
