--- a/chat_webclient/src/App.css
+++ b/chat_webclient/src/App.css
@@ -357,12 +357,7 @@ body {
 }
 
 .workspace__icon-button {
-  position: absolute;
-  top: 50%;
-  right: 10px;
-  transform: translateY(-50%);
-  opacity: 0;
-  transition: opacity 0.3s ease;
+  color: white;
 }
 
 .workspace__wrapper--channel:hover .workspace__icon-button {
@@ -710,3 +705,15 @@ body {
   flex-wrap: wrap;
   justify-content: space-between;
 }
+
+.channel-list__menu {
+  visibility: hidden;
+  color: white;
+}
+
+.channel-list__item:hover .channel-list__menu {
+  visibility: initial;
+}
+
+
+
